--- a/ShareExtension/Info.plist
+++ b/ShareExtension/Info.plist
@@ -25,10 +25,20 @@
 		<key>NSExtensionAttributes</key>
 		<dict>
 			<key>NSExtensionActivationRule</key>
-			<dict>
-				<key>NSExtensionActivationSupportsWebURLWithMaxCount</key>
-				<integer>1</integer>
-			</dict>
+			<string>
+                SUBQUERY (
+                extensionItems,
+                $extensionItem,
+                SUBQUERY (
+                    $extensionItem.attachments,
+                    $attachment,
+                    (
+                        ANY $attachment.registeredTypeIdentifiers UTI-CONFORMS-TO "public.url"
+                    )
+
+                ).@count == $extensionItem.attachments.@count
+            ).@count == 1
+			</string>
 		</dict>
 		<key>NSExtensionMainStoryboard</key>
 		<string>MainInterface</string>
