--- a/ReadingList/Settings.bundle/com.mono0926.LicensePlist.plist
+++ b/ReadingList/Settings.bundle/com.mono0926.LicensePlist.plist
@@ -22,6 +22,14 @@
 		</dict>
 		<dict>
 			<key>File</key>
+			<string>com.mono0926.LicensePlist/AMPopTip</string>
+			<key>Title</key>
+			<string>AMPopTip</string>
+			<key>Type</key>
+			<string>PSChildPaneSpecifier</string>
+		</dict>
+		<dict>
+			<key>File</key>
 			<string>com.mono0926.LicensePlist/BoringSSL-GRPC</string>
 			<key>Title</key>
 			<string>BoringSSL-GRPC</string>
