mint gen makefile 導入

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,10 @@ DerivedData/
 !default.perspectivev3
 xcuserdata/
 
+## Project
+*.xcodeproj
+*.xcworkspace
+
 ## Other
 *.moved-aside
 *.xccheckout
