--- a/project.yml
+++ b/project.yml
@@ -14,12 +14,16 @@ settings:
   configs:
     Debug:
       CODE_SIGN_IDENTITY: iPhone Developer
+      GCC_PREPROCESSOR_DEFINITIONS:
+      - $(inherited)
+      - DEBUG=1
       IPHONEOS_DEPLOYMENT_TARGET: 11.0
       MTL_ENABLE_DEBUG_INFO: INCLUDE_SOURCE
       MTL_FAST_MATH: YES
       SDKROOT: iphoneos
       SWIFT_ACTIVE_COMPILATION_CONDITIONS: DEBUG
       SWIFT_OPTIMIZATION_LEVEL: -Onone
+      SWIFT_VERSION: 5.0
     Release:
       CODE_SIGN_IDENTITY: iPhone Developer
       GCC_OPTIMIZATION_LEVEL: 0
@@ -28,11 +32,74 @@ settings:
       SDKROOT: iphoneos
       SWIFT_COMPILATION_MODE: wholemodule
       SWIFT_OPTIMIZATION_LEVEL: -O
+      SWIFT_VERSION: 5.0
 targets:
+  Entity:
+    platform: iOS
+    settings:
+      configs:
+        Debug:
+          CODE_SIGN_IDENTITY: iPhone Developer
+          CODE_SIGN_STYLE: Automatic
+          DEVELOPMENT_TEAM: EAZT2D654U
+          GCC_PREPROCESSOR_DEFINITIONS:
+          - DEBUG=1
+          - $(inherited)
+          INFOPLIST_FILE: Entity/Info.plist
+          IPHONEOS_DEPLOYMENT_TARGET: 11.0
+          PRODUCT_BUNDLE_IDENTIFIER: yyokii.Entity
+          SWIFT_VERSION: 5.0
+        Release:
+          CODE_SIGN_IDENTITY: iPhone Developer
+          CODE_SIGN_STYLE: Automatic
+          DEVELOPMENT_TEAM: EAZT2D654U
+          INFOPLIST_FILE: Entity/Info.plist
+          IPHONEOS_DEPLOYMENT_TARGET: 11.0
+          MTL_ENABLE_DEBUG_INFO: NO
+          PRODUCT_BUNDLE_IDENTIFIER: yyokii.Entity
+          SWIFT_VERSION: 5.0
+    sources:
+    - name: Entity
+      path: Entity
+    type: framework
+  GateWay:
+    platform: iOS
+    settings:
+      configs:
+        Debug:
+          CODE_SIGN_IDENTITY: iPhone Developer
+          CODE_SIGN_STYLE: Automatic
+          DEVELOPMENT_TEAM: EAZT2D654U
+          GCC_PREPROCESSOR_DEFINITIONS:
+          - DEBUG=1
+          - $(inherited)
+          INFOPLIST_FILE: GateWay/Info.plist
+          IPHONEOS_DEPLOYMENT_TARGET: 11.0
+          PRODUCT_BUNDLE_IDENTIFIER: yyokii.GateWay
+          SWIFT_VERSION: 5.0
+        Release:
+          CODE_SIGN_IDENTITY: iPhone Developer
+          CODE_SIGN_STYLE: Automatic
+          DEVELOPMENT_TEAM: EAZT2D654U
+          INFOPLIST_FILE: GateWay/Info.plist
+          IPHONEOS_DEPLOYMENT_TARGET: 11.0
+          MTL_ENABLE_DEBUG_INFO: NO
+          PRODUCT_BUNDLE_IDENTIFIER: yyokii.GateWay
+          SWIFT_OPTIMIZATION_LEVEL: -Onone
+          SWIFT_VERSION: 5.0
+    sources:
+    - name: GateWay
+      path: GateWay
+    - headerVisibility: public
+      path: GateWay/GateWay.h
+    type: framework
   ReadingList:
     dependencies:
     - sdk: WebKit.framework
     - framework: Pods_ReadingList.framework
+    - framework: Entity.framework
+    - framework: UseCase.framework
+    - framework: GateWay.framework
     platform: iOS
     postbuildScripts:
     - inputFiles:
@@ -50,7 +117,8 @@ targets:
         > \"${SCRIPT_OUTPUT_FILE_0}\"\n"
       shell: /bin/sh
       showEnvVars: false
-    - runOnlyWhenInstalling: false
+    - name: Run Script
+      runOnlyWhenInstalling: false
       script: 'if [ $CONFIGURATION = "Debug" ]; then
 
         ${PODS_ROOT}/LicensePlist/license-plist --output-path $PRODUCT_NAME/Settings.bundle
@@ -73,56 +141,48 @@ targets:
     settings:
       configs:
         Debug:
-          ALWAYS_EMBED_SWIFT_STANDARD_LIBRARIES: YES
+          ALWAYS_EMBED_SWIFT_STANDARD_LIBRARIES: $(inherited)
           CODE_SIGN_ENTITLEMENTS: ReadingList/ReadingList.entitlements
           CODE_SIGN_STYLE: Automatic
           DEVELOPMENT_TEAM: EAZT2D654U
+          FRAMEWORK_SEARCH_PATHS:
+          - $(inherited)
+          - '"."'
           INFOPLIST_FILE: ReadingList/Info.plist
           IPHONEOS_DEPLOYMENT_TARGET: 11.0
           PRODUCT_BUNDLE_IDENTIFIER: yyokii.ReadingList
           PROVISIONING_PROFILE_SPECIFIER: 
-          SWIFT_VERSION: 4.2
+          SWIFT_VERSION: 5.2.4
           TARGETED_DEVICE_FAMILY: 1
         Release:
-          ALWAYS_EMBED_SWIFT_STANDARD_LIBRARIES: YES
+          ALWAYS_EMBED_SWIFT_STANDARD_LIBRARIES: $(inherited)
           CODE_SIGN_ENTITLEMENTS: ReadingList/ReadingList.entitlements
           CODE_SIGN_STYLE: Automatic
           DEVELOPMENT_TEAM: EAZT2D654U
+          FRAMEWORK_SEARCH_PATHS:
+          - $(inherited)
+          - '"."'
           INFOPLIST_FILE: ReadingList/Info.plist
           IPHONEOS_DEPLOYMENT_TARGET: 11.0
           PRODUCT_BUNDLE_IDENTIFIER: yyokii.ReadingList
           PROVISIONING_PROFILE_SPECIFIER: 
-          SWIFT_VERSION: 4.2
+          SWIFT_VERSION: 5.2.4
           TARGETED_DEVICE_FAMILY: 1
     sources:
-      - ReadingList
+    - name: ReadingList
+      path: ReadingList
     type: application
   ShareExtension:
-    dependencies:
-    - framework: Pods_ShareExtension.framework
     platform: iOS
-    postbuildScripts:
-    - inputFiles:
-      - ${PODS_PODFILE_DIR_PATH}/Podfile.lock
-      - ${PODS_ROOT}/Manifest.lock
-      name: '[CP] Check Pods Manifest.lock'
-      outputFiles:
-      - $(DERIVED_FILE_DIR)/Pods-ShareExtension-checkManifestLockResult.txt
-      runOnlyWhenInstalling: false
-      script: "diff \"${PODS_PODFILE_DIR_PATH}/Podfile.lock\" \"${PODS_ROOT}/Manifest.lock\"
-        > /dev/null\nif [ $? != 0 ] ; then\n    # print error to STDERR\n    echo
-        \"error: The sandbox is not in sync with the Podfile.lock. Run 'pod install'
-        or update your CocoaPods installation.\" >&2\n    exit 1\nfi\n# This output
-        is used by Xcode 'outputs' to avoid re-running this script phase.\necho \"SUCCESS\"
-        > \"${SCRIPT_OUTPUT_FILE_0}\"\n"
-      shell: /bin/sh
-      showEnvVars: false
     settings:
       configs:
         Debug:
           CODE_SIGN_ENTITLEMENTS: ShareExtension/ShareExtension.entitlements
           CODE_SIGN_STYLE: Automatic
           DEVELOPMENT_TEAM: EAZT2D654U
+          FRAMEWORK_SEARCH_PATHS:
+          - $(inherited)
+          - '"."'
           INFOPLIST_FILE: ShareExtension/Info.plist
           IPHONEOS_DEPLOYMENT_TARGET: 11.0
           LD_RUNPATH_SEARCH_PATHS:
@@ -131,12 +191,15 @@ targets:
           - '@executable_path/../../Frameworks'
           PRODUCT_BUNDLE_IDENTIFIER: yyokii.ReadingList.ShareExtension
           SKIP_INSTALL: YES
-          SWIFT_VERSION: 4.2
+          SWIFT_VERSION: 5.2.4
           TARGETED_DEVICE_FAMILY: 1
         Release:
           CODE_SIGN_ENTITLEMENTS: ShareExtension/ShareExtension.entitlements
           CODE_SIGN_STYLE: Automatic
           DEVELOPMENT_TEAM: EAZT2D654U
+          FRAMEWORK_SEARCH_PATHS:
+          - $(inherited)
+          - '"."'
           INFOPLIST_FILE: ShareExtension/Info.plist
           IPHONEOS_DEPLOYMENT_TARGET: 11.0
           LD_RUNPATH_SEARCH_PATHS:
@@ -145,7 +208,7 @@ targets:
           - '@executable_path/../../Frameworks'
           PRODUCT_BUNDLE_IDENTIFIER: yyokii.ReadingList.ShareExtension
           SKIP_INSTALL: YES
-          SWIFT_VERSION: 4.2
+          SWIFT_VERSION: 5.2.4
           TARGETED_DEVICE_FAMILY: 1
     sources:
     - name: Constants
@@ -153,7 +216,34 @@ targets:
     - ReadingList/DB/UserDefaultManager.swift
     - ReadingList/Extension/Date+Extension.swift
     - ReadingList/Support/Color.xcassets
-    - name: Base.lproj
-      path: ShareExtension/Base.lproj
     - ShareExtension/ShareViewController.swift
     type: app-extension
+  UseCase:
+    platform: iOS
+    settings:
+      configs:
+        Debug:
+          CODE_SIGN_IDENTITY: iPhone Developer
+          CODE_SIGN_STYLE: Automatic
+          DEVELOPMENT_TEAM: EAZT2D654U
+          GCC_PREPROCESSOR_DEFINITIONS:
+          - DEBUG=1
+          - $(inherited)
+          INFOPLIST_FILE: UseCase/Info.plist
+          IPHONEOS_DEPLOYMENT_TARGET: 11.0
+          PRODUCT_BUNDLE_IDENTIFIER: yyokii.UseCase
+          SWIFT_VERSION: 5.0
+        Release:
+          CODE_SIGN_IDENTITY: iPhone Developer
+          CODE_SIGN_STYLE: Automatic
+          DEVELOPMENT_TEAM: EAZT2D654U
+          INFOPLIST_FILE: UseCase/Info.plist
+          IPHONEOS_DEPLOYMENT_TARGET: 11.0
+          MTL_ENABLE_DEBUG_INFO: NO
+          PRODUCT_BUNDLE_IDENTIFIER: yyokii.UseCase
+          SWIFT_OPTIMIZATION_LEVEL: -Onone
+          SWIFT_VERSION: 5.0
+    sources:
+    - name: UseCase
+      path: UseCase
+    type: framework
