--- a/ReadingList/Settings.bundle/com.mono0926.LicensePlist.plist
+++ b/ReadingList/Settings.bundle/com.mono0926.LicensePlist.plist
@@ -68,6 +68,14 @@
 		</dict>
 		<dict>
 			<key>File</key>
+			<string>com.mono0926.LicensePlist/FirebaseAuth</string>
+			<key>Title</key>
+			<string>FirebaseAuth</string>
+			<key>Type</key>
+			<string>PSChildPaneSpecifier</string>
+		</dict>
+		<dict>
+			<key>File</key>
 			<string>com.mono0926.LicensePlist/FirebaseCore</string>
 			<key>Title</key>
 			<string>FirebaseCore</string>
@@ -151,6 +159,14 @@
 			<string>com.mono0926.LicensePlist/gRPC-Core</string>
 			<key>Title</key>
 			<string>gRPC-Core</string>
+			<key>Type</key>
+			<string>PSChildPaneSpecifier</string>
+		</dict>
+		<dict>
+			<key>File</key>
+			<string>com.mono0926.LicensePlist/GTMSessionFetcher</string>
+			<key>Title</key>
+			<string>GTMSessionFetcher</string>
 			<key>Type</key>
 			<string>PSChildPaneSpecifier</string>
 		</dict>
