--- a/ReadingList/Settings.bundle/com.mono0926.LicensePlist.plist
+++ b/ReadingList/Settings.bundle/com.mono0926.LicensePlist.plist
@@ -100,6 +100,14 @@
 		</dict>
 		<dict>
 			<key>File</key>
+			<string>com.mono0926.LicensePlist/FirebaseFirestoreSwift</string>
+			<key>Title</key>
+			<string>FirebaseFirestoreSwift</string>
+			<key>Type</key>
+			<string>PSChildPaneSpecifier</string>
+		</dict>
+		<dict>
+			<key>File</key>
 			<string>com.mono0926.LicensePlist/FirebaseInstallations</string>
 			<key>Title</key>
 			<string>FirebaseInstallations</string>
